# mankey

./: .pre-commit-config.yaml  NOTES.md  README.md  config_example.toml  pyproject.toml  update_flashcards.py
mankey/: anki_connector.py  cloze_flashcard.py  enclosed_flashcard.py  question_answer_alt_flashcard.py  question_answer_flashcard.py  remnote_flashcard.py  shared_flashcard.py
